fixed the path calculator